# This version tag is used in building "cvstag.h" for version identification.

2011-05-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-72:
	  hacprsim: commands enabled automatic expansion of
		aggregate array references, e.g. x[0..1].y[0..2][3..4].
		This should make some commands more convenient.
	  Test cases added.


2011-05-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-71:
	  ipple: added emit-fig, emit-dot also takes optional file
		argument ot write out to file instead of stdout.
		TODO: add options to figure generation.


2011-05-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-70-merged-pr-01-20:
	  Branch merge, introducing ipple -- the interactive
		physics-driven placement engine.


2011-05-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-64-pr-01-20:
	  No source revision, just added test support for comparing
		ipple test results in the presence of numerical,
		floating-point differences.
	  Concluding branch.


2011-05-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-69:
	  hflat: added ipple preset, implemented printing of
		channel source/destination terminals, enabled with
		the -f channel-terminals option.
	  Documented, test cases added.


2011-04-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-68:
	  hflat: added -f process-hierarchy option to wrap rules
		in $process hierarchical groups.
	  global_entry_context: added _gpid to have the current 
		global process ID number available.
	  Documented, test case added.
	  TODO: add hflat preset for ipple, placer tool coming from branch


2011-04-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-67:
	  hacknet: when counting ndrain/pdrain terminals, also include
		count for source terminals, lumped into same count.
	  Test cases updated, 1 added.


2011-04-28	David Fang		<fangism@users.sourceforge.net>
